fixed dark mode bug

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body {
   margin-left: 230px; /* Space for the fixed sidebar */
   padding: 20px;
   flex: 1;
-  background-color: #f4f4f4;
 }
 
 .content h1 {
